# order_manage_system

./: .gitignore  README.md  auto_pack.ps1  项目讲解文档.md
comment/src/: comment_service.cpp
division/: task_division.md  task_struct.md
doc/: Qt基础教程.md
include/: Comment_msg.hpp  Comment_service.h  FileManager.h  Order_mgr.hpp  queue_msg.hpp  queue_service.h
order/src/: Order_mgr.cpp
order_manage_system/include/: Order_mgr.hpp
order_manage_system/src/: Order_mgr.cpp
order_system_caiwei_suzhanhang_kuangjiaxi/: caiwei_cmate.md
queue/src/: queue_service.cpp
src/: comment_dialog.cpp
storage/: FileManager.cpp
storage/data/: comment.txt  history_order.txt  menu.txt  queue.txt  users.txt
ui/: CMakeLists.txt
ui/src/: auth_page.cpp  auth_page.h  cart_page.cpp  cart_page.h  checkout_dialog.cpp  checkout_dialog.h  comment_dialog.cpp  comment_dialog.h  dish_card.cpp  dish_card.h  main.cpp  menu_page.cpp  menu_page.h  nav_bar.cpp  nav_bar.h  order_system.cpp  order_system.h  order_system.ui  queue_page.cpp  queue_page.h
